--- a/cvslvk.lyx
+++ b/cvslvk.lyx
@@ -1,4 +1,4 @@
-#This file was created by <nikita> Mon Dec 27 14:46:15 1999
+#This file was created by <nikita> Mon Dec 27 14:57:29 1999
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -5465,7 +5465,11 @@ $(CL_DIR)/Makefile.cvslvk
 \layout Standard
 
 Система cslvk устроена таким образом, что перед выполнением любой команды
- make автоматически осуществляется (пере)вычисление зависимостей всех файлов,
+ 
+\family typewriter 
+make
+\family default 
+ автоматически осуществляется (пере)вычисление зависимостей всех файлов,
  для которых зависимости не вычислены ранее либо устарели.
  Однако, с целью экономии времени это можно иногда не делать.
  Например, нет никакого резона вычислять зависимости перед выполнением команды
