Прогнал через spellchecker

--- a/cvslvk.lyx
+++ b/cvslvk.lyx
@@ -1,4 +1,4 @@
-#This file was created by <nikita> Mon Dec 27 14:57:29 1999
+#This file was created by <nikita> Sat Jan  8 02:01:57 2000
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -493,8 +493,8 @@ cleanall
 интерфейса
 \emph toggle 
  системы cvslvk.
- Под интерфейом понимается набор команд и параметров, используемых при работе
- с системой.
+ Под интерфейсом понимается набор команд и параметров, используемых при
+ работе с системой.
  
 \layout Subsection
 
@@ -973,7 +973,7 @@ CL_OPTIMIZE
 \family typewriter 
 Makefile
 \family default 
--е одну или несколько из слудующих переменных.
+-е одну или несколько из следующих переменных.
 \layout Itemize
 
 
@@ -2194,7 +2194,7 @@ $(CL_PREFIX)/lib
 \family typewriter 
 EXPORT_INCLUDES
 \family default 
-, то перечесленные в ней файлы и каталоги копируются в каталог 
+, то перечисленные в ней файлы и каталоги копируются в каталог 
 \family typewriter 
 $(CL_PREFIX)/include
 \family default 
@@ -2205,7 +2205,7 @@ $(CL_PREFIX)/include
 \family typewriter 
 SCRIPTS
 \family default 
-, то перечесленные в ней файлы копируются в каталог 
+, то перечисленные в ней файлы копируются в каталог 
 \family typewriter 
 $(CL_PREFIX)/bin
 \family default 
@@ -2429,7 +2429,7 @@ $CL_DIR
 \family typewriter 
 $CL_DIR
 \family default 
- соответствующий подкаталог и зарегисирировав инсталляцию командой 
+ соответствующий подкаталог и зарегистрировав инсталляцию командой 
 \family typewriter 
 cvslvk
 \protected_separator 
@@ -2905,7 +2905,7 @@ CL_BD
  Некоторый модуль может объявить, что для его использования необходимо также
  использовать некоторый другой модуль (или модули), т.е.
  представить дополнительные требования на использование.
- Эти требования могут добвалять параметры к уже имеющимся требованиям (при
+ Эти требования могут добавлять параметры к уже имеющимся требованиям (при
  этом множества параметров объединяются) или требовать новый модуль.
  Различные рабочие инсталляции одного модуля могут иметь разные требования.
 \layout Standard
@@ -3000,7 +3000,7 @@ DYANA
  зависимостями).
 \layout Standard
 
-Список зависимостей находится врабочей инсталляции в файле с именем 
+Список зависимостей находится в рабочей инсталляции в файле с именем 
 \family typewriter 
 depend.cvslvk
 \family default 
@@ -3090,7 +3090,7 @@ libXYZ
 \family typewriter 
 Makefile
 \family default 
--е соответетвующие переменные:
+-е соответствующие переменные:
 \layout LyX-Code
 
 INCLUDES = -I/usr/local/include
@@ -3310,7 +3310,7 @@ override CL_SYMLINKS += $(CL_WI)/bin/trcdump
 CL_SYMLINKS
 \family default 
  используется только в режиме сборки программы (т.е.
- когда опрелена переменная 
+ когда определена переменная 
 \family typewriter 
 EXECUTABLE
 \family default 
@@ -3733,7 +3733,7 @@ CL_USE_MODULES
 rules.cvslvk 
 \family default 
 рекомендуется контролировать корректное определение этих переменных.
- Устанавливать более сложные условия использования модуля не рекомандуется.
+ Устанавливать более сложные условия использования модуля не рекомендуется.
 \layout Standard
 
 При определении в файле 
@@ -4097,7 +4097,7 @@ y.tab.c
 y.tab.h
 \family default 
 .
- Для корректной обработки зависисмостей следует добавить 
+ Для корректной обработки зависимостей следует добавить 
 \family typewriter 
 $(CL_BD)/y.tab.c.deps
 \family default 
@@ -4168,7 +4168,7 @@ CL_CPP_COMPILE_COMMAND
 \begin_deeper 
 \layout Standard
 
-Эти переменные содержат соответственно команды вычичления зависимости одного
+Эти переменные содержат соответственно команды вычисления зависимости одного
  файла, компиляции одного Си-файла и компиляции одного Си++-файла.
  Используются эти переменные тогда, когда по какой-либо причине не срабатывают
  встроенные в систему cvslvk шаблонные правила, например когда исходные
@@ -4277,7 +4277,8 @@ cvslvk
 remove_wi
 \family default 
 .
- Параметры этой комады -- полные имена рабочих инсталляций, подлежащих удалению.
+ Параметры этой команды -- полные имена рабочих инсталляций, подлежащих
+ удалению.
 \layout Standard
 
 Если в рабочей инсталляции (в ее корневом каталоге) имеется файл с именем
@@ -4347,8 +4348,8 @@ CL_OBJECTS_NU
 \layout Standard
 
 Статические библиотеки представляют из себя просто набор объектных файлов,
- которые подключаются к испольняемому файлу на этапе компоновки, если в
- них определены функции или глобальные переменные, к которым имеются обращения
+ которые подключаются к исполняемому файлу на этапе компоновки, если в них
+ определены функции или глобальные переменные, к которым имеются обращения
  в ранее подключенных объектных файлах.
  Соответственно, код из этих объектных файлов физически копируется в каждый
  исполняемый файл, скомпонованный с библиотекой, приводя к перерасходу дискового
@@ -4379,7 +4380,7 @@ CL_OBJECTS_NU
 \begin_inset Quotes erd
 \end_inset 
 
- -- для их запуска не требуется каких-либо внешних по отношениюк ним объектов
+ -- для их запуска не требуется каких-либо внешних по отношению к ним объектов
  и/или настроек.
  Если же файл скомпонован с разделяемой библиотекой, то необходимо обеспечить,
  чтобы библиотека с указанным именем была 
@@ -4401,8 +4402,8 @@ CL_OBJECTS_NU
 Система cvslvk скрывает практически все технические детали, связанные с
  использованием разделяемых библиотек.
  По умолчанию все создаваемые библиотеки разделяемые.
- Единственное что требуется от пользользователей -- следить за сохранением
- двоичной совместимости и при нарушении таковой изменять 
+ Единственное что требуется от пользователей -- следить за сохранением двоичной
+ совместимости и при нарушении таковой изменять 
 \emph on 
 имя класса совместимости
 \emph toggle 
@@ -4447,7 +4448,7 @@ libqt.so
  файла.
  Файл с именем класса совместимости обычно представляет из себя символьную
  ссылку на библиотеку конкретной версии.
- Наконец, имя для комполовщика должно быть всегда обинаковым -- 
+ Наконец, имя для компоновщика должно быть всегда одинаковым -- 
 \family typewriter 
 lib<
 \family default 
@@ -4641,7 +4642,7 @@ lib$(LIBRARY).so
 ,
 \layout Itemize
 
-полное имя библоитеки -- 
+полное имя библиотеки -- 
 \family typewriter 
 lib$(LIBRARY).so.$(CL_LIBRARY_VERSION).$(CL_LIBRARY_REVIRSION)
 \family default 
@@ -4694,7 +4695,7 @@ EXPORT_INCLUDES
 \family default 
 \series default 
 Содержит разделенный пробелами список файлов (скорее всего include-файлов)
- для комирования в подкаталог 
+ для копирования в подкаталог 
 \family typewriter 
 include/
 \family default 
@@ -4778,7 +4779,7 @@ CC
 \family default 
 .
  Эта команда может работать долго (сравнимо с компиляцией всех объектных
- файлов), но зато автоматически будут созданы все упомянуиые в библиотеке
+ файлов), но зато автоматически будут созданы все упомянутые в библиотеке
  экземпляры 
 \family typewriter 
 template
@@ -4795,7 +4796,7 @@ cr
 .
 \layout Subsubsection
 
-Использоваение библиотек
+Использование библиотек
 \layout Standard
 
 В системе cvslvk может быть три способа использования библиотек программами.
@@ -4860,7 +4861,7 @@ CL_INTERNAL_LIBRARY
 LIBRARY
 \family default 
  с единственным исключением: при инсталляции статическая библиотека не инсталлир
-уетя, а у разделяемой не инсталлируется имя для компоновщика.
+уется, а у разделяемой не инсталлируется имя для компоновщика.
  В итоге после инсталляции невозможна компоновка с библиотекой (но возможен
  запуск скомпонованных с ней исполняемых файлов).
 \begin_deeper 
@@ -4998,7 +4999,7 @@ CL_USE_IL
 не производится
 \emph toggle 
  -- чтобы избежать многократных инсталляций этих каталогов при использовании
- библиотеки несколькомо программами.
+ библиотеки несколькими программами.
  Автоматической очистки тоже не производится -- чтобы не удалять библиотеку,
  используемую несколькими программами, при очистке в каталоге одной из этих
  программ.
@@ -5072,10 +5073,10 @@ CL_VARS
 
 \family default 
 \series default 
-В этой переменной указываются разделенные пробелами условия, которые трубуется
+В этой переменной указываются разделенные пробелами условия, которые требуется
  проверить.
  Условия могут быть двух видов.
- Дла проверки наличия
+ Для проверки наличия
 \begin_float footnote 
 \layout Standard
 
@@ -5185,7 +5186,7 @@ rules.cvslvk
 \family default 
 .
  Если по какой-либо причине при несоблюдении условий необходимо немедленно
- прекратить дальнейшую работу, то это можно сделать при помощи комадны,
+ прекратить дальнейшую работу, то это можно сделать при помощи команды,
  хранимой в переменной 
 \family typewriter 
 CL_CHECK_VARS_COMMAND
@@ -5256,7 +5257,7 @@ $(CL_CHECK_VARS_COMMAND)
 \family default 
 .
  Например, если одна и та же функция определена более чем в одной библиотеке,
- то будет использована первая найденая.
+ то будет использована первая найденная.
  Или (только при использовании статических библиотек) если функции одной
  библиотеки вызывают функции другой, то первая должна подключаться раньше
  -- если раньше будет подключена вторая, то к моменту ее подключения ссылок
@@ -5409,7 +5410,7 @@ make
 \family default 
  выполнять команды, соответствующие некоторой цели, вне зависимости от того,
  где какие файлы есть.
- В принципе, такой механизм имеется (зависимоть 
+ В принципе, такой механизм имеется (зависимость 
 \family typewriter 
 .PHONY
 \family default 
@@ -5422,7 +5423,7 @@ make
 \family typewriter 
 $(ALWAYS)
 \family default 
-, то эта целю будет пересобираться всегда, когда она окаывается в командной
+, то эта целю будет пересобираться всегда, когда она оказывается в командной
  строке 
 \family typewriter 
 make
@@ -5480,7 +5481,7 @@ make
 clean
 \family default 
 , т.к.
- зависимости этой командой не используются и все рабно будут стерты в процессе
+ зависимости этой командой не используются и все равно будут стерты в процессе
  ее выполнения.
 \layout Standard
 
@@ -5521,8 +5522,11 @@ $(CL_DIR)/Makefile.cvslvk
 ной работе системы.
 \layout Standard
 
-Так, ни в коем случае нельзя добавлять в переменную правиля, зависящие от
- собираемой в данном каталоге программы или библиотеки.
+Так, ни в коем случае нельзя добавлять в переменную 
+\family typewriter 
+CL_NODEP_RULES
+\family default 
+ правила, зависящие от собираемой в данном каталоге программы или библиотеки.
  Иначе при выполнении этих правил система cvslvk может не осуществить (хотя
  может и осуществить) пересборку каталога, когда на самом деле это надо.
 \end_deeper 
