Replace get_arch()-get_os() logic.
get_arch() now returns hardcoded string "x86-linux".
get_os() return hardcoded string "legacy".

Signed-off-by: Alexander GQ Gerasiov <gq@cs.msu.su>

--- a/pseudo/install
+++ b/pseudo/install
@@ -50,7 +50,7 @@ create_links()
 }
 
 SOURCE=$(pwd)
-ARCH="$("../cvslvk" get_arch)-$("../cvslvk" get_os)"
+ARCH="$("../cvslvk" get_arch)"
 
 for FILE in *.rules; do
 	NAME="$(basename "$FILE" .rules)"
